# Multithreading

./: .gitignore  CMakeLists.txt  README.md
source/01_threadManagement/: CMakeLists.txt
source/01_threadManagement/private/01_threadManagement/: doubleHello.cpp  main.cpp  matrixProduct.cpp
source/01_threadManagement/public/01_threadManagement/: doubleHello.h  matrixProduct.h
source/02_shareData/: CMakeLists.txt
source/02_shareData/private/02_shareData/: main.cpp  ordering.cpp  sumTable.cpp
source/02_shareData/public/02_shareData/: ordering.h  sumTable.h
source/03-synchronizeOperations/: CMakeLists.txt
source/03-synchronizeOperations/private/03-synchronizeOperations/: cooker.cpp  customer.cpp  main.cpp  meal.cpp  restaurant.cpp  waiter.cpp
source/03-synchronizeOperations/public/03-synchronizeOperations/: cooker.h  customer.h  meal.h  restaurant.h  waiter.h
uml/: Actor-Model.mdj
